# izone

./: .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  ERROR_MESSAGES.md  LICENSE.md  LICENSE_UPDATE_SUMMARY.md  README.md  aircon-rufus  aircon_v1  aircon_v2  aircon_v3  izone.toml.example
.claude/: settings.local.json
bash/: izone
src/: api.rs  constants.rs  helpers.rs  main.rs  models.rs
src/commands/: mod.rs  schedules.rs  system.rs  zones.rs
