# izone/Cargo.toml
[package]
name = "izone"
version = "0.4.2"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.4"
stringcase = "0.4.0"
